[package]
name = "advancedfx-injector"
version = "2.0.0"
authors = ["Dominik Tugend <dominik@matrixstorm.com>"]
edition = "2021"

[dependencies]
libc = { version = "0", features = [] }
bitflags = "1"
serde_json = "1"
jsonrpc-core = "18"
jsonrpc-core-client = "18"
jsonrpc-derive = "18"
jsonrpc-stdio-server = "18"
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"