[package]
name = "injector"
version = "2.0.0"
authors = ["Dominik Tugend <dominik@matrixstorm.com>"]
license = "MIT"
edition = "2021"
homepage = "https://github.com/advancedfx/injector"
repository = "https://github.com/advancedfx/injector"

[dependencies]
libc = { version = "0", features = [] }
bitflags = "1"
clap = { version = "4.2.1", features = ["derive"] }
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
ctrlc = "3.2.5"

[build-dependencies]
sha2 = "0"
zip = "0"
http_req = "0"
unwrap = "1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
